--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "tslint -p \".\" -t stylish"
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-firebase": "^5.5.6",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.2.0",
+    "react-navigation": "^3.11.1",
+    "react-navigation-hooks": "^1.0.1",
+    "rxjs": "^6.5.2",
+    "undux": "^5.0.0-beta.22"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -23,7 +30,12 @@
     "eslint": "^6.1.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.56.0",
+    "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "16.8.6",
+    "tslint": "^5.18.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^4.0.0",
+    "tslint-react-recommended": "^1.0.15",
     "typescript": "^3.5.3"
   },
   "jest": {
