--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "tslint -p \".\" -t stylish"
   },
   "dependencies": {
+    "@types/react-native-material-ui": "^1.32.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-material-ui": "^1.30.1",
     "react-native-reanimated": "^1.2.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-navigation-hooks": "^1.0.1",
     "rxjs": "^6.5.2",
